--- a/sprint-1/projects/web-page/know-your-worth/public/index.html
+++ b/sprint-1/projects/web-page/know-your-worth/public/index.html
@@ -30,15 +30,14 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <header>
       <div class="home-container">
-        <a href="">Home</a>
-        <a href="">About</a>
-        <a href="">Information</a>
-        <div id="root"></div>
+        <link href=""><img class="home-Logo" src="./money-logo.png"></link>
+        <h2>Achieve Fair Pay</h2>
       </div>
     </header>
     <main class="main-container">
         Home page layout
       <div id="opening-photo"></div>
+      <div id="root"></div>
       <h2>About us</h2>
       <div id="team-photo-section">
         
